<resources>
    <string name="app_name">Studeasy</string>
    <string name="login">Anmelden</string>
    <string name="logout">Ausloggen</string>
    <string name="SV_Title">Fachansicht</string>
    <string name="daytoday">dd.mm.yy</string>

    <!--subject_activity -->
    <string name="title_activity_subject">Fachansicht</string>
    <string name="free_lesson_value">Freistunde</string>
    <string name="free_lesson_sign">---</string>
    <string name="school_break">Pause</string>
    <string name="subject_value">Fachplatzhalter</string>
    <string name="subject_label">Fach:</string>
    <string name="teacher_label">Lehrer:</string>
    <string name="teacher_value">Lehrerplatzhalter</string>
    <string name="from_label">Von:</string>
    <string name="from_value">##:##</string>
    <string name="to_label">Bis:</string>
    <string name="to_value">##:##</string>
    <string name="room_label">Raum:</string>
    <string name="room_value">Raum ####</string>
    <string name="homework_label">Hausaufgaben:</string>
    <string name="homeworkDone">Sehr gut!</string>
    <string name="homeworkUndone">Schade!</string>
    <string name="homework_value">
        Hier kommen später eine Menge Hausaufgaben rein:\n
        - Buch lesen\n
        - Aufgaben rechnen\n
        - Aufsatz schreiben\n
        - Vokabeln üben\n
        - Experiment durchführen\n
        - Sportübungen machen\n
        - Buch lesen\n
        - Aufgaben rechnen\n
        - Aufsatz schreiben\n
        - Vokabeln üben\n
        - Experiment durchführen\n
        - Sportübungen machen\n
    </string>


    <!--Logging -->
    <string name="username">Benutzerkennung</string>
    <string name="password">Passwort</string>
    <string name="submit">Einloggen</string>
    <string name="welcome">Willkommen</string>
    <string name="goodbye">Auf Wiedersehen!</string>
    <string name="missingPasswort">Bitte geben Sie noch ihr Passwort ein</string>
    <string name="missingUsername">Bitte geben Sie noch ihre Benutzerkennung ein</string>
    <string name="missingBoth">Bitte geben Sie noch ihre Benutzerkennung und ihr Passwort ein</string>

    <!--days -->
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>

    <!--days shortcut -->

    <string name="monday_shortcut">Mo</string>
    <string name="tuesday_shortcut">Di</string>
    <string name="wednesday_shortcut">Mi</string>
    <string name="thursday_shortcut">Do</string>
    <string name="friday_shortcut">Fr</string>

    <!-- times -->
    <string name="from_1">08:30</string>
    <string name="to_1">09:15</string>
    <string name="from_2">09:15</string>
    <string name="to_2">10:00</string>
    <string name="from_3">10:15</string>
    <string name="to_3">11:00</string>
    <string name="from_4">11.00</string>
    <string name="to_4">11:45</string>
    <string name="from_5">12:00</string>
    <string name="to_5">12:45</string>
    <string name="from_6">12:45</string>
    <string name="to_6">13:00</string>

    <!-- subjects -->

    <!--teacher-->
    <string name="finish">Fertig</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

</resources>
