<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
           <TextView
               android:text="@string/username"
               android:textSize="@dimen/textview_size"
               android:paddingLeft="@dimen/padding_left"
               android:paddingTop="20dp"
               android:paddingBottom="@dimen/padding_bottom"
               android:paddingRight="@dimen/padding_right"/>
            <EditText
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/password"
                android:textSize="@dimen/textview_size"
                android:paddingLeft="@dimen/padding_left"
                android:paddingTop="@dimen/padding_top"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingRight="@dimen/padding_right"/>

            <EditText
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="exampleMethod"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/textview_size"/>
    </LinearLayout>
</LinearLayout>